js/js.translator/testData/incremental/invalidation/suspendInterfaceWithDefaultParams/lib1/l1A.0.kt
class ClassA1 : InterfaceA {
    override suspend fun functionA(x: Int, s: String, b: Boolean?): Int {
        return 0
    }
}

